fixed horizontal scroll
yes! finally no horizontal scroll

--- a/Style.css
+++ b/Style.css
@@ -7,7 +7,7 @@ body{
     margin:auto 0;
   }
 .container{
-    /* border: 3px solid gold; */
+    border: 3px solid gold;
     min-height: 99vh;
 }
 @media only screen and (max-width:900px) {
@@ -26,8 +26,8 @@ body{
     text-align: right;
     text-transform: uppercase;
     font-size: 7vh;
-    margin-right: 3vw;
-    /* border: 3px solid gold; */
+    margin-right: 0vw;
+    border: 3px solid gold;
 }
 @media only screen and (max-width:900px) {
     .container1{
@@ -51,7 +51,7 @@ body{
     margin-top: -5vh;
     margin-right: 3vw;
     text-align: right;
-    /* border:3px solid gold; */
+    border:3px solid gold;
 }
 @media only screen and (max-width:900px) {
     .container2{
@@ -91,18 +91,6 @@ body{
     transition-timing-function: ease;
     transform: scale(1.2)
 }
-
-.container4{
-    /* about me */
-    text-align: center;
-    padding-top: 4vh;
-    font-size: 5vh;
-    text-decoration: none;
-    border-radius: 10px;
-    color: white;
-    background-color: rgba(128, 128, 128, 0.342);
-    /* border: 1px solid rgba(255, 255, 255, 0.411); */
-}
 @media only screen and (max-width:900px) {
     .container4{
         font-size:3vh ;
@@ -110,68 +98,20 @@ body{
         padding-top: 1vh;
     }
 }
-.container4:hover{
-    transition: all 2s ;
-    transform: scale(1.1);
-}
-.container5{
-    /* Portfolio */
-    text-align: center;
-    padding-top: 4vh;
-    font-size: 5vh;
-    text-decoration: none;
-    border-radius: 10px;
-    color: white;
-    background-color: rgba(128, 128, 128, 0.342);
-    /* border: 1px solid rgba(255, 255, 255, 0.411); */
-}
-@media only screen and (max-width:900px) {
-    .container5{
-        font-size:3vh ;
-        height: 4vh;
-        padding-top: 1vh;
-    }
-}
-.container5:hover{
-    transition: all 2s ;
-    transform: scale(1.1);
-}
-.container6{
-    /* Contact */
-    text-align: center;
-    padding-top: 4vh;
-    font-size: 5vh;
-    text-decoration: none;
-    border-radius: 10px;
-    color: white;
-    background-color: rgba(128, 128, 128, 0.342);
-    /* border: 1px solid rgba(255, 255, 255, 0.411); */
-}
-@media only screen and (max-width:900px) {
-    .container6{
-        font-size:3vh ;
-        height: 4vh;
-        padding-top: 1vh;
-    }
-}
-.container6:hover{ 
-    transition: all 2s ;
-    transform: scale(1.1);
-}
 .container7{
     /* container of the second section */
     padding: 2vw;
     display: grid;
     grid-template-columns: 20vw 25vw 25vw 20vw;
     grid-template-rows: 25vh 40vh 25vh;
-    row-gap: 2vh;
+    row-gap: 0vh;
     column-gap: 2vw;
     min-height: 100vh;
     max-height: 100vh;
-    max-width: 100vw;
-    min-width: 100vw;
+    max-width: 98vw;
+    min-width: 90vw;
     background: linear-gradient(to right, #000000f6, #2a0000ef);
-    /* border: 3px solid rgb(255, 0, 0); */
+    border: 3px solid rgb(255, 0, 0);
 }
 @media only screen and (max-width:900px) {
     .container7{
@@ -180,10 +120,11 @@ body{
         row-gap: 0vw;
         column-gap: 0vw;
         padding: 0vw;
+        background: linear-gradient(to bottom, #000000f6, #2a0000ef);
     }
 }
 .container8{
-    grid-column-start: 0;
+    grid-column-start: 1;
     grid-column-end: 3 ;
     color: rgb(204, 204, 204);
     font-size: 2vh;
